# LMTailRisk

./: .gitignore  README.md  launch_judge_local.sh  pyproject.toml
misc/: run_50xALL.py
monte_carlo_estimates/src/emergent_misalignment/: README.md  eval.py  judge.py  reformat_output.py
monte_carlo_estimates/src/persona_vectors/: reformat_output.py
monte_carlo_estimates/src/strong_reject/: generate_mc_est.py
persona_vectors/: config.py  gen_vec_pipeline.py  generate_vec.py  judge.py
persona_vectors/eval/: eval_persona.py  model_utils.py
persona_vectors/scripts/: generate_vec-Llama-3.1-8B-Instruct.sh  generate_vec-phi-4.sh
rare-input-modeling/f2i/: eval_crimson.py  example.sh  f2i_input_modeling.py  f2i_input_summary_prompt.json  generate_f2i_responses.py  rad_data.py  sample_and_eval.sbatch  train_f2i_input_model.sbatch  training_input_model_readme.md
rare-input-modeling/f2i/f2i_judge/: LICENSE  README.md  _dep.toml  evaluate_reports.py  example.py  example.sh  requirements.txt  setup.py
rare-input-modeling/f2i/scratch/: analyze_crimson_evals.py  merge_summaries.py  qwen3_summaries.py  run_summaries.sbatch
rare-input-modeling/scripts/: download_from_hf.py  gen_responses.py  judge_responses.py  prompts.py  repack_dataset.py  upload_to_hf.py  vllm_utils.py
smc/: cem.py  client.py  create_advbench_mc.py  create_paraphrase_mc.py  cross_entropy_method.py  est_persona.py  est_unsafe_to_unsafe.py  estimate_CEM.py  estimator.py  fk_steering.py  grid.py  judge.py  model_utils.py  paraphrases_est_unsafe_to_unsafe.py  rewards.py  sample.py  utils.py
(+197 files in other folders)
